--- a/tela_inicial.html
+++ b/tela_inicial.html
@@ -1,13 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/pagina_inicial.css">
     <title>Tela inicial</title>
 </head>
+
 <body>
-    
-    
+    <main class="container">
+        <div class="botoes">
+            <div class="div_cmç">
+                <button class="btn_cmç">Começar a jogar</button>
+            </div>
+            <div class="div_add">
+                <button class="btn_add">Adicionar nova palavra</button>
+            </div>
+        </div>
+    </main>
+
+
 </body>
+
 </html>
