terminei as 2 paginas

--- a/add_nova_palavra.html
+++ b/add_nova_palavra.html
@@ -12,7 +12,13 @@
     <main class="container">
         <div class="div_palavra">
             <input class="palavra" type="text" placeholder="Digite a palavra a ser adicionada">
-
+        </div>
+        <div class="botoes">
+            <small>	
+                &#33; Máx de 8 letras
+            </small>
+        <button class="btn_salvar">Salvar e começar</button>
+        <button class="btn_cancel">Cancelar</button>
         </div>
         
 
