--- a/tabuleiro.html
+++ b/tabuleiro.html
@@ -1,13 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/tabuleiro.css">
     <title>Tabuleiro</title>
 </head>
+
 <body>
-    
-    
+    <main class="container">
+        <div class="principal">
+            <div class="palavra">
+                <div>
+                    <input class="input_palavra" type="text">
+                    <input class="input_palavra" type="text">
+                    <input class="input_palavra" type="text">
+                    <input class="input_palavra" type="text">
+                    <input class="input_palavra" type="text">
+
+                </div>
+
+                <canvas id="canvas_palavra">
+
+
+
+                </canvas>
+            </div>
+            <div class="falhas">
+                <p>
+                    <input class="input_falhas" value="A" type="text">
+                    <input class="input_falhas" type="text">
+                    <input class="input_falhas" type="text">
+                    <input class="input_falhas" type="text">
+                    <input class="input_falhas" type="text">
+                    <input class="input_falhas" type="text">
+                    <input class="input_falhas" type="text">
+                    <input class="input_falhas" type="text">
+                    <input class="input_falhas" type="text">
+                    <input class="input_falhas" type="text">
+                </p>
+            </div>
+        </div>
+        <div class="botoes"><button class="btn_novoj">Novo jogo</button> <button class="btn_desistir">Desistir</button>
+        </div>
+
+
+    </main>
+
+    <script src="js/canvas_palavra.js"></script>
 </body>
+
 </html>
