terminei várias funcionalidades
Teclar e mostrar as palavras e os erros

--- a/tabuleiro.html
+++ b/tabuleiro.html
@@ -14,43 +14,26 @@
     <main class="container">
         <div class="principal">
             <div class="palavra">
-                <div>
-                    <input class="input_palavra" type="text">
-                    <input class="input_palavra" type="text">
-                    <input class="input_palavra" type="text">
-                    <input class="input_palavra" type="text">
-                    <input class="input_palavra" type="text">
+                <div class="letras">
+                    
 
                 </div>
-
-                <canvas id="canvas_palavra">
-
-
-
-                </canvas>
             </div>
             <div class="falhas">
                 <p>
-                    <input class="input_falhas" value="A" type="text">
-                    <input class="input_falhas" type="text">
-                    <input class="input_falhas" type="text">
-                    <input class="input_falhas" type="text">
-                    <input class="input_falhas" type="text">
-                    <input class="input_falhas" type="text">
-                    <input class="input_falhas" type="text">
-                    <input class="input_falhas" type="text">
-                    <input class="input_falhas" type="text">
-                    <input class="input_falhas" type="text">
+                    
                 </p>
             </div>
         </div>
-        <div class="botoes"><button class="btn_novoj">Novo jogo</button> <button class="btn_desistir">Desistir</button>
+        <div class="botoes">
+            <a href="tabuleiro.html"><button class="btn_novoj" >Novo jogo</button> </a>
+            <a href="tela_inicial.html"><button class="btn_desistir">Desistir</button></a>
         </div>
 
 
     </main>
 
-    <script src="js/canvas_palavra.js"></script>
+    <script src="js/Renderiza.js"></script>
 </body>
 
 </html>
