--- a/tela_inicial.html
+++ b/tela_inicial.html
@@ -14,10 +14,10 @@
     <main class="container">
         <div class="botoes">
             <div class="div_cmç">
-                <button class="btn_cmç">Começar a jogar</button>
+                <a href="tabuleiro.html"><button class="btn_cmç">Começar a jogar</button></a>
             </div>
             <div class="div_add">
-                <button class="btn_add">Adicionar nova palavra</button>
+                <a href="add_nova_palavra.html"><button class="btn_add">Adicionar nova palavra</button></a>
             </div>
         </div>
     </main>
