--- a/tabuleiro.html
+++ b/tabuleiro.html
@@ -12,6 +12,7 @@
 
 <body>
     <main class="container">
+        <canvas class="forca" width="464" height="300"></canvas>
         <div class="principal">
             <div class="palavra">
                 <div class="letras">
@@ -34,6 +35,7 @@
     </main>
 
     <script src="js/Renderiza.js"></script>
+    <script src="js/Desenha.js"></script>
 </body>
 
 </html>
