--- a/tabuleiro.html
+++ b/tabuleiro.html
@@ -35,7 +35,7 @@
     </main>
 
     <script src="js/Renderiza.js"></script>
-    <script src="js/Desenha.js"></script>
+    <script src="js/desenha.js"></script>
 </body>
 
 </html>
