--- a/tabuleiro.html
+++ b/tabuleiro.html
@@ -12,6 +12,7 @@
 
 <body>
     <main class="container">
+        <input type="text" class="input_cell" style="display: none;">
         <canvas class="forca" width="464" height="300"></canvas>
         <div class="principal">
             <div class="palavra">
