--- a/tabuleiro.html
+++ b/tabuleiro.html
@@ -29,7 +29,7 @@
         </div>
         <div class="botoes">
             <a href="tabuleiro.html"><button class="btn_novoj" >Novo jogo</button> </a>
-            <a href="tela_inicial.html"><button class="btn_desistir">Desistir</button></a>
+            <a href="index.html"><button class="btn_desistir">Desistir</button></a>
         </div>
 
 
