--- a/tabuleiro.html
+++ b/tabuleiro.html
@@ -12,7 +12,7 @@
 
 <body>
     <main class="container">
-        <input type="hidden" class="input_cell" >
+        <input type="search" class="input_cell" >
         <canvas class="forca" width="464" height="300"></canvas>
         <div class="principal">
             <div class="palavra">
