--- a/add_nova_palavra.html
+++ b/add_nova_palavra.html
@@ -18,7 +18,7 @@
                 &#33; Máx de 8 letras
             </small>
         <button class="btn_salvar">Salvar e começar</button>
-        <a href="tela_inicial.html"><button class="btn_cancel">Cancelar</button></a>
+        <a href="index.html"><button class="btn_cancel">Cancelar</button></a>
         </div>
         
 
