--- a/tabuleiro.html
+++ b/tabuleiro.html
@@ -12,23 +12,54 @@
 
 <body>
     <main class="container">
-        <input type="email" class="input_cell" >
+        <input type="email" class="input_cell">
         <canvas class="forca" width="464" height="300"></canvas>
         <div class="principal">
             <div class="palavra">
                 <div class="letras">
-                    
+
 
                 </div>
             </div>
             <div class="falhas">
                 <p>
-                    
+
                 </p>
             </div>
         </div>
+        <div class="teclado">
+            <button class="btn_teclado">Q</button>
+            <button class="btn_teclado">W</button>
+            <button class="btn_teclado">E</button>
+            <button class="btn_teclado">R</button>
+            <button class="btn_teclado">T</button>
+            <button class="btn_teclado">Y</button>
+            <button class="btn_teclado">U</button>
+            <button class="btn_teclado">I</button>
+            <button class="btn_teclado">O</button>
+            <button class="btn_teclado">P</button>
+            <br>
+            <button class="btn_teclado">A</button>
+            <button class="btn_teclado">S</button>
+            <button class="btn_teclado">D</button>
+            <button class="btn_teclado">F</button>
+            <button class="btn_teclado">G</button>
+            <button class="btn_teclado">H</button>
+            <button class="btn_teclado">J</button>
+            <button class="btn_teclado">K</button>
+            <button class="btn_teclado">L</button>
+            <button class="btn_teclado">Ç</button>
+            <br>
+            <button class="btn_teclado">Z</button>
+            <button class="btn_teclado">X</button>
+            <button class="btn_teclado">C</button>
+            <button class="btn_teclado">V</button>
+            <button class="btn_teclado">B</button>
+            <button class="btn_teclado">N</button>
+            <button class="btn_teclado">M</button>
+        </div>
         <div class="botoes">
-            <a href="tabuleiro.html"><button class="btn_novoj" >Novo jogo</button> </a>
+            <button class="btn_novoj" >Novo jogo</button> 
             <a href="index.html"><button class="btn_desistir">Desistir</button></a>
         </div>
 
