--- a/tabuleiro.html
+++ b/tabuleiro.html
@@ -65,9 +65,9 @@
 
 
     </main>
-
+    <script src="js/Desenha.js"></script>
     <script src="js/Renderiza.js"></script>
-    <script src="js/desenha.js"></script>
+    
 </body>
 
 </html>
