tranformei em uma single page

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 
 <body>
-    <main class="container">
-        <div class="botoes">
+    <section class="container_inicial">
+        <div class="botoes_inicial">
             <div class="div_cmç">
                 <a href="tabuleiro.html"><button class="btn_cmç">Começar a jogar</button></a>
             </div>
@@ -20,7 +20,7 @@
                 <a href="add_nova_palavra.html"><button class="btn_add">Adicionar nova palavra</button></a>
             </div>
         </div>
-    </main>
+    </section>
 
 
 </body>
