--- a/test.html
+++ b/test.html
@@ -22,6 +22,7 @@
 
         pincel.fillStyle='black';
         pincel.fillRect(0,0,600,400)
+        /*
 
         var lista=['ALURA', 'CASA', 'JAVA', 'FRONTEND', 'PANELA']
 
@@ -30,7 +31,10 @@
         
         var list=JSON.parse(localStorage.listas)
 
-        console.log(list)
+        console.log(list)*/
+        console.log(localStorage.lista)
+
+        console.log(localStorage.lista==undefined)
 
     </script>
 </body>
